--- a/index.html
+++ b/index.html
@@ -4,14 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Safe Route</title>
+  <link rel="icon" href="./images/Safe Route Logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./css/home.css">
-
 </head>
-<body class="container d-flex flex-column justify-content-between">
+<body class=" ">
+  
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand text-success " href="#"><img class="img-fluid" src="./images/Safe Route Transparent logo.png" style="width: 200px;" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon "><i class="bi bi-list fs-2"></i></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active text-success mx-2" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-success mx-2" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-success mx-2" href="#">Support</a>
+          </li>
+          <li class="nav-item">
+            <button id="login-btn" class="btn btn-success rounded-pill mx-2">LOG IN <i class="bi bi-key"></i></button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <section class="d-flex bg-light mt-5 justify-content-sm-between align-items-center">
+    <div class="m-5">
+      <h1 class="text ">Plan Smater</h1>
+      <h1>Drive Safer</h1>
+      <h1>Learn More</h1>
+    </div>
+    <div class="m-5 d-none d-sm-block">
+     <img src="./images/real.png" alt=""> 
+    </div>
+  </section>
   <header>
-    <div class="text-center display-5 fw-bold text-light rounded-pill bg-success py-3">Safe Route</div>
+    <br>
+    <br>
+    <br>
+    <br>
   </header>
 
   <main class="d-flex justify-content-center align-items-center">
@@ -47,13 +85,14 @@
           </form>
         </div>
         <div class="d-flex justify-content-center">
-          <button id="login-btn" class="btn btn-success btn-lg rounded-pill">LOG IN <i class="bi bi-key"></i></button>
+          <button id="login-btn-secondary" class="btn btn-success rounded-2 me-1">LOG IN <i class="bi bi-key"></i></button>
+          <a href="./register.html" class="btn btn-outline-danger ms-1"> Register</a>
         </div>
       </div>
     </div>
   </main>
 
-  <section class="row my-5 g-3 d-flex justify-content-center">
+  <section class="row mx-5 my-5 g-3 d-flex justify-content-center">
     <div class="col-md-6 col-lg-3 mb-4">
       <div class="p-4 bg-success text-light rounded-3 h-100">
         <h3>Intelligent Traffic Management</h3>
@@ -80,12 +119,14 @@
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2024 Safe Route. All rights reserved. | Powered by <a href="https://www.techskool.org/">Techskool Education</a><img src=" ./images/techlogo.png" alt="TechSkool Logo"></p>
+    <div class="pot">
+      <footer>
+    <p>&copy; 2024 Safe Route. All rights reserved. | Powered by <a href="https://www.techskool.org/">Techskool Education</a><img src="./images/techlogo.png" alt="TechSkool Logo"></p>
     <div>
       <a href="https://x.com/techskooledu">X</a> | <a href="https://www.instagram.com/techskooledu/">Instagram</a> | <a href="https://ng.linkedin.com/company/techskooledu">LinkedIn</a>
     </div>
-  </footer>
+      </footer>  
+  </div>
 
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -100,6 +141,14 @@
     loginBtn.addEventListener('click', () => {
       loginForm.classList.remove('d-none');
     });
+
+    // Add an event listener for the secondary login button if needed
+    const loginBtnSecondary = document.getElementById('login-btn-secondary');
+    if (loginBtnSecondary) {
+      loginBtnSecondary.addEventListener('click', () => {
+        loginForm.classList.remove('d-none');
+      });
+    }
 
   </script>
 </body>
