--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand text-success " href="#"><img class="img-fluid" src="./images/Safe Route Transparent logo.png" style="width: 200px;" alt=""></a>
+      <a class="navbar-brand text-success " href="index.html"><img class="img-fluid" src="./images/Safe Route Transparent logo.png" style="width: 200px;" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon "><i class="bi bi-list fs-2"></i></span>
       </button>
@@ -23,7 +23,7 @@
             <a class="nav-link active text-success mx-2" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success mx-2" href="about.html">About</a>
+            <a class="nav-link text-success mx-2" href="about.php">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-success mx-2" href="#">Support</a>
@@ -37,9 +37,9 @@
   </nav>
   <section class="d-flex bg-light mt-5 justify-content-sm-between align-items-center">
     <div class="m-5">
-      <h1 class="text ">Plan Smater</h1>
-      <h1>Drive Safer</h1>
-      <h1>Learn More</h1>
+      <h1 class="text ">Plan Smater,</h1>
+      <h1>Drive Safer,</h1>
+      <h1>Learn More...</h1>
     </div>
     <div class="m-5 d-none d-sm-block">
      <img src="./images/real.png" alt=""> 
