--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="d-flex justify-content-center">
           <button id="login-btn-secondary" class="btn btn-success rounded-2 me-1">LOG IN <i class="bi bi-key"></i></button>
-          <a href="./register.html" class="btn btn-outline-danger ms-1"> Register</a>
+          <a href="./register.html" class="btn btn-light ms-1"> Register</a>
         </div>
       </div>
     </div>
