--- a/register.html
+++ b/register.html
@@ -12,6 +12,31 @@
   <link rel="stylesheet" href="./css/register.css">
 </head>
 <body>
+  
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand text-success " href="index.html"><img class="img-fluid" src="./images/Safe Route Transparent logo.png" style="width: 200px;" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon "><i class="bi bi-list fs-2"></i></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active text-success mx-2" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-success mx-2" href="about.php">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-success mx-2" href="#">Support</a>
+          </li>
+          <li class="nav-item">
+            <button id="login-btn" class="btn btn-success rounded-pill mx-2">LOG IN <i class="bi bi-key"></i></button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="register-form-container">
     <h2 class="mb-4">Register</h2>
     <form id="registerForm" action="register.php" method="POST">
